raw-manifests/local-staging/sample-game/backend-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-game-backend-vs
  namespace: istio-system
spec:
  hosts:
    - "api.sample-game.staging.local"
  gateways:
    - istio-ingressgateway-staging
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: sample-game-server-staging-service.sample-game-staging.svc.cluster.local
            port:
              number: 80
