raw-manifests/local-staging/sample-game/frontend-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-game-frontend-vs
  namespace: istio-system
spec:
  hosts:
    - "sample-game.staging.local"
  gateways:
    - istio-ingressgateway-staging
  http:
    - route:
        - destination:
            host: sample-game-client-staging-service.sample-game-staging.svc.cluster.local
            port:
              number: 80
